--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
     border: 0;
     margin: 0;
     background-color: #0d0d0d;
 }
 
-nav {
+.topo {
     width: 100%;
     display: flex;
     height: 56px;
@@ -98,4 +102,35 @@ nav {
 .icone--container--3 {
     width: 29px;
     height: 29px;
+}
+
+.menu {
+    display: flex;
+}
+
+nav {
+    width: 88px;
+    height: 309px;
+    background-color: #0f0f0f;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.botao--menu {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.nome--botao {
+    color: white;
+    text-align: center;
+    font-family: Inter;
+    font-size: 8px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
